2005-12-06  Dick Porter  <dick@ximian.com>

	* wapi-private.h: 
	* handles.c: 
	* semaphore-private.h: 
	* semaphores.c: Implement named semaphores

2005-11-24  Dick Porter  <dick@ximian.com>

	* processes.c (GetProcessId): Implement GetProcessId()

2005-11-17  Dick Porter  <dick@ximian.com>

	* processes.h: 
	* processes.c: Implement ShellExecuteEx as a wrapper around
	CreateProcess.

2005-11-11  Dick Porter  <dick@ximian.com>

	* threads.c: Give mutex abandoning its own exported function, so
	it can be called when the runtime is cleaning up.

	* handles.c (_wapi_search_handle_namespace): Do a handle
	collection befre starting to check namespace strings, so that any
	stale cruft gets removed.

2005-11-11  Dick Porter  <dick@ximian.com>

	* threads.c: Move thread handles back into the shared space.

	* handles.c (_wapi_handle_unref): Add support for shared handles
	with close() handlers

2005-11-04  Dick Porter  <dick@ximian.com>

	* sockets.c (ioctlsocket): Use select instead of if to avoid a
	type promotion problem on 64bit freebsd.  Based on patch by Lou
	Kamenov <kamenovl@gmail.com>, fixes bug 76447.

2005-11-04  Dick Porter  <dick@ximian.com>

	* io.c (file_write): Only do the file locking if
	MONO_STRICT_IO_EMULATION is set.

2005-10-21  Dick Porter  <dick@ximian.com>

	* processes.c: 
	* handles.c (_wapi_lookup_handle): Cope when the shared part of a
	handle has been deleted.
	(_wapi_handle_unref): And when the deleted shared part is pointed
	to as a handle is deleted

2005-10-20  Dick Porter  <dick@ximian.com>

	* processes.c (process_set_current): If the expected process
	handle slot doesn't contain the correct pid, create a new handle.

	* handles.c (_wapi_search_handle): When the search doesn't find
	anything, return failure instead of the last handle we looked at.
	(_wapi_handle_ref, _wapi_handle_unref): Don't try to ref or unref
	unused handles (makes tracking refcounting bugs easier.)

2005-10-19  Dick Porter  <dick@ximian.com>

	* handles.c: